# BSU

./: .gitignore
ExtremalProgrammingExersices/Part1/: pom.xml
Final Test/Andrey_Semeynikov_5_group/: GameEN.txt  GroupsOut.txt  Results.txt  pom.xml  test.puml
Industrial Programming/Kollokvium/StringBuilder/: pom.xml
Industrial Programming/Kollokvium/Temperature_converter/: pom.xml
Industrial Programming/Main Project/Task_Organizer/: pom.xml  testuml.puml  tetsuml.puml
Operation Systems/Kollokvium_2/#1/: #1.sln
Operation Systems/Lab_1/: Lab_1.sln
Operation Systems/Lab_1/Creator/: Creator.vcxproj
Operation Systems/Lab_1/Lab_1/: Lab_1.cpp  Lab_1.vcxproj  creator1.txt  reporter1.txt
Operation Systems/Lab_1/Reporter/: Reporter.vcxproj
Operation Systems/Lab_2/: Lab_2.sln
Operation Systems/Lab_2/Lab_2/: Lab_2.cpp  Lab_2.vcxproj
Operation Systems/Lab_2_CMake/: CMakeLists.txt
Operation Systems/Lab_2_CMake/Lab_2_CMake/: CMakeLists.txt  Lab_2_CMake.cpp  Lab_2_CMake.h
Operation Systems/Lab_2_boost/: Lab_2_boost.sln
Operation Systems/Lab_2_boost/Lab_2_boost/: Lab_2_boost.cpp  Lab_2_boost.vcxproj  Lab_2_boost.vcxproj.filters
Operation Systems/Lab_2_С++20/: Lab_2.sln
Operation Systems/Lab_2_С++20/Lab_2/: Lab_2.cpp
Operation Systems/Lab_2_С++20/UnitTest/: UnitTest.cpp  UnitTest.vcxproj
Operation Systems/Lab_3/: Lab_3.sln
Operation Systems/Lab_3/Lab_3/: Lab_3.cpp  Lab_3.h  Lab_3.vcxproj  Lab_3.vcxproj.filters
Operation Systems/Lab_3/UnitTest1/: UnitTest1.cpp  (+1 more)
Operation Systems/Lab_4/: Lab_4.sln
Operation Systems/Lab_5/: Lab_5.sln
(+118 files in other folders)
